--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,23 @@
-<h1>Restaurants List</h1>
+<div class="container">
+  <h1>Restaurants</h1>
 
+  <table class=table>
+    <thead class="thead-dark">
+      <tr>
+        <th>Name</th>
+        <th>Category</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @restaurants.each do |restaurant| %>
+        <tr>
+          <td><%= link_to restaurant.name, restaurant_path(restaurant)%></td>
+          <td><%=restaurant.category %></td>
+        </tr>
+        <% end %>
+    </tbody>
+  </table>
 
+  <p> <%= link_to 'Add a new restaurant', new_restaurant_path %></p>
+
+</div>
