--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<div class="container">
+  <h1><%= @restaurant.name %></h1>
+
+  <table class="table">
+    <tr>
+      <th>Address</th>
+      <th>Category</th>
+      <th>Phone Number</th>
+    </tr>
+    <tr>
+      <td><%= @restaurant.address %></td>
+      <td><%= @restaurant.category %></td>
+      <td><%= @restaurant.phone_number %></td>
+    </tr>
+  </table>
+
+  <p> <%= link_to 'All restaurants', restaurants_path %></p>
+
+</div>
